@@ -1,79 +1,53 @@
-import com.example.IKitten;
+import com.example.Feline;
 import com.example.Lion;
 import org.junit.Assert;
-import org.junit.Before;
 import org.junit.Test;
 import org.junit.runner.RunWith;
-import org.junit.runners.Parameterized;
 import org.mockito.Mock;
 import org.mockito.Mockito;
-import org.mockito.MockitoAnnotations;
+import org.mockito.junit.MockitoJUnitRunner;
 
-import java.util.ArrayList;
-import java.util.Collections;
+import java.util.List;
+
+import static org.junit.Assert.assertThrows;
+import static org.junit.Assert.assertTrue;
 
 
-@RunWith(Parameterized.class)
+@RunWith(MockitoJUnitRunner.class)
 public class LionTest {
 
-    @Before
-    public void init() {
-        MockitoAnnotations.initMocks(this);
-    }
 
     @Mock
-    private Lion lion;
-
-    @Mock
-    private IKitten kitten;
-
-    private final String name;
-    private final Boolean result;
-
-    public LionTest(String name, Boolean result) {
-        this.name = name;
-        this.result = result;
-    }
-
-    @Parameterized.Parameters
-    public static Object[][] getData() {
-        return new Object[][]{
-                {"Самка", false},
-                {"Самец", true},
-        };
-    }
-
-    @Test
-    public void testLionName() throws Exception {
-        lion = new Lion(name);
-        Assert.assertEquals(result, lion.doesHaveMane());
-    }
+    private Feline feline;
 
 
     @Test
     public void testLionOther() {
-        try {
-            lion = new Lion("Другое");
-        } catch (AssertionError | Exception e) {
-            Assert.assertEquals("Используйте допустимые значения пола животного - самец или самка", e.getMessage());
-        }
+        Exception exception = assertThrows(Exception.class, () -> {
+            Lion lion = new Lion("Другое");
+        });
+        String expectedMessage = "Используйте допустимые значения пола животного - самец или самка";
+        String actualMessage = exception.getMessage();
+
+        assertTrue(actualMessage.contains(expectedMessage));
+
     }
+
 
     @Test
     public void testGetFood() throws Exception {
-        lion = new Lion(kitten);
-        Mockito.when(lion.getFood("Хищник")).thenReturn(Collections.singletonList("Хищник"));
-        ArrayList<String> data = new ArrayList<>();
-        data.add("Хищник");
-        Assert.assertEquals(data, lion.getFood("Хищник"));
+        Lion lion = new Lion(feline);
+        List<String> expectedFood = List.of("Животные", "Птицы", "Рыба");
+        Mockito.when(feline.getFood()).thenReturn(expectedFood);
+        Assert.assertEquals(expectedFood, lion.getFood());
     }
 
     @Test
     public void testGetKittens() {
-        lion = new Lion(kitten);
-        Mockito.when(lion.getKittens()).thenReturn(1);
-
-        Assert.assertEquals(1, lion.getKittens());
+        Lion lion = new Lion(feline);
+        int expectedNumber = 1;
+        Mockito.when(feline.getKittens()).thenReturn(expectedNumber);
+        Assert.assertEquals(expectedNumber, lion.getKittens());
     }
 
 
